baselines/webppl/zeroone_w1/output_SMC_1.txt

Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:15

14|       if (y == 1) {
15|         condition((x*w1 + w2) < 0);
    --------^
16|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:15

14|       if (y == 1) {
15|         condition((x*w1 + w2) < 0);
    --------^
16|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:15

14|       if (y == 1) {
15|         condition((x*w1 + w2) < 0);
    --------^
16|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:18

17|       else {
18|         condition((x*w1 + w2) > 0);
    --------^
19|       }


Error: All particles have zero weight.
    at /space/poorvagarg/webppl/src/inference/smc.js:84

83|   SMC.prototype.error = function(errType) {
84|     var err = new Error(errType);
    --------------^
85|     if (this.throwOnError) {

    at zeroone.wppl:15

14|       if (y == 1) {
15|         condition((x*w1 + w2) < 0);
    --------^
16|       }

